# docker_01

./: README.md  pyproject.toml
api_example/: Dockerfile  main.py  test_api.py
exercice_1_2/: Dockerfile
exercice_1_3/: Dockerfile  main.py
